Updates the CSS layout of Media Information. Its no longer position:absolute; which was causing issues with information bleeding into the review, or excess blank space depending on how much content was in the Media Information area. Opted to use display:inline-block to achieve horizontal rows.

--- a/TokuCinema/src/styles/components/mediadetails/desktop.scss
+++ b/TokuCinema/src/styles/components/mediadetails/desktop.scss
@@ -6,16 +6,38 @@
 }
 
 .media-information {
-  position: absolute;
-  right: $desktop-gutter;
-  top: $below-header + 40px;
-  display: flex;
+  display: inline-block;
+}
+
+.media-information div{
+  display: inline-block;
 }
 
 .media-poster {
-  display: block;
+  display: inline-block;
+  margin-right: 50px;
 }
 
-.media-information-parent {
-  height: 400px;
+.media-information-parent div {
+  vertical-align: top;
+}
+
+.left-information {
+  width: 300px;
+}
+
+.right-information {
+  width: 300px;
+}
+
+.left-information div{
+  display: inline;
+}
+
+.right-information div{
+  display: inline;
+}
+
+.media-review {
+  margin-top: 25px;
 }
