--- a/TokuCinema/src/styles/components/mediadetails/tablet.scss
+++ b/TokuCinema/src/styles/components/mediadetails/tablet.scss
@@ -11,8 +11,8 @@
   justify-content: center;
 }
 
-.media-information div {
-  width: 300px;
+.media-poster {
+  width: auto;
 }
 
 .left-information {
